--- a/1-node-farm/package.json
+++ b/1-node-farm/package.json
@@ -12,6 +12,15 @@
     "slugify": "^1.4.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "prettier": "^2.0.5"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "none",
+    "bracketSpacing": true,
+    "semi": true,
+    "printWidth": 120,
+    "endOfLine": "lf"
   }
 }
